# power-grid

./: .gitignore  Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  output_final_brackets.txt  output_final_format.txt  output_validation.txt  pyproject.toml  requirements.txt  setup.py  validation_verbose.txt
__pycache__/: __init__.cpython-311.pyc.1999287825264  __init__.cpython-311.pyc.2094811749296  __init__.cpython-314.pyc.1349936325296  __init__.cpython-314.pyc.2195297250752  env.cpython-311.pyc.2314619335536  env.cpython-311.pyc.2478739004496  env.cpython-311.pyc.2808721257168  env.cpython-314.pyc.1349936325296  env.cpython-314.pyc.1589601349344  inference.cpython-314.pyc.1349942894416  models.cpython-311.pyc.2094867829328  models.cpython-314.pyc.1349942894416  models.cpython-314.pyc.1589607796000  server.cpython-311.pyc.2094811750736  server.cpython-314.pyc.1349942894416  server.cpython-314.pyc.1769019321936  server.cpython-314.pyc.2269000019536
graders/: __init__.py  grader_hard.py
graders/__pycache__/: __init__.cpython-311.pyc.2808761731632  __init__.cpython-314.pyc.1349942906640  grader_easy.cpython-314.pyc.1349942906640  grader_hard.cpython-311.pyc.2808761002528  (+2 more)
power_grid_env/: .gitignore  Dockerfile  README.md  __init__.py  env.py  inference.py  openenv.yaml  pyproject.toml  server.py
power_grid_env/graders/: grader_easy.py  grader_medium.py
power_grid_env/server/: app.py
power_grid_env/tasks/: __init__.py  easy_task.py  hard_task.py  medium_task.py
server/: app.py
tasks/: task_easy.py  task_hard.py  task_medium.py
(+4 files in other folders)
