[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power_grid_env"
version = "0.1.0"
description = "Smart Power Grid Load Balancer Environment"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
